  . Fixed memleaks
  . Fixed var_dump()
  . Fixed isset/empty/(bool) behavior
  . Fixed iterator edge cases
  . Added methods getNamespaces(), getDocNamespaces()
- Fixed bug #35456 (+ 1 [time unit] format did not work). (Ilia)
- Fixed bug #35431 (PDO crashes when using LAZY fetch with fetchAll). (Wez)
- Fixed bug #35430 (PDO crashes on incorrect FETCH_FUNC use). (Tony)
- Fixed bug #35422 (strtotime() does not parse times with UTC as timezone).
  (Ilia)
- Fixed bug #35414 (strtotime() no longer works with ordinal suffix). (Ilia)
- Fixed bug #35409 (undefined reference to 'rl_completion_matches'). (Jani)
- Fixed bug #35399 (Since fix of bug #35273 SOAP decoding of
  soapenc:base64binary fails). (Dmitry)
- Fixed bug #35393 (changing static protected members from outside the class,
  one more reference issue). (Dmitry)
- Fixed bug #35381 (ssl library is not initialized properly). (Alan)
- Fixed bug #35028 (SimpleXML object fails FALSE test). (Marcus)

28 Nov 2005, PHP 5.1.1
- Disabled native date class to prevent pear::date conflict. (Ilia)
- Changed reflection constants be both PHP and class constants. (Johannes)
- Added an additional field $frame['object'] to the result array of
  debug_backtrace() that contains a reference to the respective object when the
  frame was called from an object. (Sebastian)
- Fixed bug #35423 (RecursiveDirectoryIterator doesnt appear to recurse with 
  RecursiveFilterIterator). (Marcus)
- Fixed bug #35413 (Removed -dev flag from Zend Engine version). (Ilia)
- Fixed bug #35411 (Regression with \{$ handling). (Ilia)
- Fixed bug #35406 (eval hangs when evall'ed code ends with comment w/o 
  newline). (Marcus)
- Fixed bug #35391 (pdo_mysql::exec does not return number of affected rows). 
  (Tony)
- Fixed bug #35382 (Comment in end of file produces fatal error). (Ilia)
- Fixed bug #35360 (exceptions in interactive mode (php -a) may cause crash).
  (Dmitry)
- Fixed bug #35358 (Incorrect error messages for PDO class constants). (Ilia)